--- a/Resources/Views/Account/LoginFingerprint.fr.resx
+++ b/Resources/Views/Account/LoginFingerprint.fr.resx
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Or" xml:space="preserve">
-    <value>o</value>
-  </data>
   <data name="SignIn" xml:space="preserve">
-    <value>Iniciar sesión</value>
+    <value>Se connecter</value>
   </data>
-  <data name="ScanYourIris" xml:space="preserve">
-    <value>Escanear Iris</value>
+  <data name="SignInWithIris" xml:space="preserve">
+    <value>Connexion par iris</value>
   </data>
-  <data name="SignInWithFingerprint" xml:space="preserve">
-    <value>Iniciar con huella</value>
+  <data name="ScanYourFingerprint" xml:space="preserve">
+    <value>Scannez votre empreinte</value>
+  </data>
+  <data name="Or" xml:space="preserve">
+    <value>ou</value>
   </data>
 </root>
