--- a/Resources/Views/Shared/_Layout.en.resx
+++ b/Resources/Views/Shared/_Layout.en.resx
@@ -135,4 +135,7 @@
   <data name="Privacy" xml:space="preserve">
     <value>Privacy</value>
   </data>
+  <data name="SignIn" xml:space="preserve">
+    <value>Sign In</value>
+  </data>
 </root>
