--- a/Resources/Views/Shared/_Layout.es.resx
+++ b/Resources/Views/Shared/_Layout.es.resx
@@ -135,4 +135,7 @@
   <data name="Privacy" xml:space="preserve">
     <value>Privacidad</value>
   </data>
+  <data name="SignIn" xml:space="preserve">
+    <value>Iniciar Sesión</value>
+  </data>
 </root>
