--- a/Resources/Views/Shared/_Layout.fr.resx
+++ b/Resources/Views/Shared/_Layout.fr.resx
@@ -135,4 +135,7 @@
   <data name="Privacy" xml:space="preserve">
     <value>Confidentialité</value>
   </data>
+  <data name="SignIn" xml:space="preserve">
+    <value>Se connecter</value>
+  </data>
 </root>
