--- a/Resources/Views/Shared/_Layout.resx
+++ b/Resources/Views/Shared/_Layout.resx
@@ -117,16 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Or" xml:space="preserve">
-    <value>o</value>
+  <data name="Home" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value />
+  </data>
+  <data name="English" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Spanish" xml:space="preserve">
+    <value />
+  </data>
+  <data name="French" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Privacy" xml:space="preserve">
+    <value />
   </data>
   <data name="SignIn" xml:space="preserve">
-    <value>Iniciar sesión</value>
+    <value />
   </data>
-  <data name="ScanYourIris" xml:space="preserve">
-    <value>Escanear Iris</value>
-  </data>
-  <data name="SignInWithFingerprint" xml:space="preserve">
-    <value>Iniciar con huella</value>
+  <data name="Private" xml:space="preserve">
+    <value />
   </data>
 </root>
