--- a/Resources/Views/SpaceMissions/ManageSpaceMissions.fr.resx
+++ b/Resources/Views/SpaceMissions/ManageSpaceMissions.fr.resx
@@ -117,91 +117,52 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Project Apollo" xml:space="preserve">
-    <value>Proyecto Apolo</value>
+  <data name="Manage projects" xml:space="preserve">
+    <value>Gérer des projets</value>
   </data>
-  <data name="That's one small step" xml:space="preserve">
-    <value>Un pequeño paso para un hombre. Un gran salto para la humanidad.</value>
+  <data name="Back" xml:space="preserve">
+    <value>Arrière</value>
   </data>
-  <data name="Primary goal" xml:space="preserve">
-    <value>Objetivo principal</value>
-  </data>
-  <data name="Landing humans on the Moon and returning them safely to Earth." xml:space="preserve">
-    <value>Aterrizar humanos en la Luna y devolverlos sanos y salvos a la Tierra.</value>
-  </data>
-  <data name="Status" xml:space="preserve">
-    <value>Estado</value>
-  </data>
-  <data name="Finished" xml:space="preserve">
-    <value>Finalizado</value>
-  </data>
-  <data name="Program duration" xml:space="preserve">
-    <value>Duración del programa</value>
-  </data>
-  <data name="Lunar Landing Missions" xml:space="preserve">
-    <value>Misiones de aterrizaje lunar</value>
-  </data>
-  <data name="Crewed Missions" xml:space="preserve">
-    <value>Misiones tripuladas</value>
-  </data>
-  <data name="Spacecraft &amp; Technology" xml:space="preserve">
-    <value>Naves espaciales y tecnología</value>
-  </data>
-  <data name="The flight mode" xml:space="preserve">
-    <value>El modo de vuelo, encuentro en órbita lunar, fue seleccionado en 1962. Los propulsores para el programa fueron el Saturno IB para vuelos en órbita terrestre y el Saturno V para vuelos lunares.</value>
-  </data>
-  <data name="Apollo was" xml:space="preserve">
-    <value>Apolo era una nave espacial de tres partes: el módulo de comando (CM), que servía como cuartel general y sección de control de vuelo; el módulo de servicio (SM) para la propulsión y los sistemas de apoyo de la nave (cuando juntos, los dos módulos se llaman CSM); y el módulo lunar (LM), que llevaba a dos miembros de la tripulación a la superficie lunar, los apoyaba en la Luna y los devolvía al CSM en órbita lunar.</value>
-  </data>
-  <data name="View the Apollo Spacecraft Reference book" xml:space="preserve">
-    <value>Ver el libro de referencia de la nave Apollo.</value>
-  </data>
-  <data name="Crew" xml:space="preserve">
-    <value>Tripulación</value>
-  </data>
-  <data name="Research pilot, astronaut" xml:space="preserve">
-    <value>Piloto de investigación, astronauta</value>
-  </data>
-  <data name="Apollo 11 Mission commander" xml:space="preserve">
-    <value>Comandante de la misión Apollo 11.</value>
-  </data>
-  <data name="Time in space" xml:space="preserve">
-    <value>Tiempo en el espacio</value>
-  </data>
-  <data name="8 days and 14 hours" xml:space="preserve">
-    <value>8 días y 14 horas</value>
-  </data>
-  <data name="Freeze" xml:space="preserve">
-    <value>Congelado</value>
-  </data>
-  <data name="Lunar Module Pilot" xml:space="preserve">
-    <value>Piloto del módulo lunar</value>
-  </data>
-  <data name="Apollo 11 Mission pilot" xml:space="preserve">
-    <value>Piloto de la misión Apollo 11</value>
-  </data>
-  <data name="12 days and 1 hour" xml:space="preserve">
-    <value>12 días y 1 hora</value>
-  </data>
-  <data name="Command module pilot" xml:space="preserve">
-    <value>Piloto del módulo de comando</value>
-  </data>
-  <data name="11 days and 2 hours" xml:space="preserve">
-    <value>11 días y 2 horas</value>
-  </data>
-  <data name="Chronogram" xml:space="preserve">
-    <value>Cronograma</value>
-  </data>
-  <data name="Add resources" xml:space="preserve">
-    <value>Agregar recursos</value>
-  </data>
-  <data name="Example Text" xml:space="preserve">
-    <value>Texto de ejemplo</value>
-  </data>
-  <data name="Upload file" xml:space="preserve">
-    <value>Subir archivo</value>
+  <data name="Search Project" xml:space="preserve">
+    <value>Rechercher projet</value>
   </data>
   <data name="Add" xml:space="preserve">
-    <value>Añadir</value>
+    <value>Ajouter</value>
+  </data>
+  <data name="Last projects" xml:space="preserve">
+    <value>Derniers projets</value>
+  </data>
+  <data name="Project Apollo" xml:space="preserve">
+    <value>Projet Apollo</value>
+  </data>
+  <data name="Lunar" xml:space="preserve">
+    <value>Lunaire</value>
+  </data>
+  <data name="Coordinator" xml:space="preserve">
+    <value>Coordinateur</value>
+  </data>
+  <data name="Description1" xml:space="preserve">
+    <value>Amener des humains sur la Lune et les ramener en toute sécurité.</value>
+  </data>
+  <data name="Human Resources" xml:space="preserve">
+    <value>Ressources Humaines</value>
+  </data>
+  <data name="Budget balance" xml:space="preserve">
+    <value>Équilibre budgétaire</value>
+  </data>
+  <data name="Select" xml:space="preserve">
+    <value>Sélectionner</value>
+  </data>
+  <data name="Project Gemini" xml:space="preserve">
+    <value>Projet Gemini</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="Description2" xml:space="preserve">
+    <value>Préparer les astronautes à l'exploration lunaire.</value>
+  </data>
+  <data name="Space" xml:space="preserve">
+    <value>Espace</value>
   </data>
 </root>
