--- a/Resources/_Layout.resx
+++ b/Resources/_Layout.resx
@@ -135,4 +135,7 @@
   <data name="Privacy" xml:space="preserve">
     <value>Privacy</value>
   </data>
+  <data name="Results and Publications" xml:space="preserve">
+    <value />
+  </data>
 </root>
