--- a/Resources/Views/ResearchPrograms/AddResearchPrograms.es.resx
+++ b/Resources/Views/ResearchPrograms/AddResearchPrograms.es.resx
@@ -117,25 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Investigators in charge" xml:space="preserve">
-    <value>Investigateurs en charge</value>
+  <data name="Add Project" xml:space="preserve">
+    <value>Añadir Proyecto</value>
   </data>
   <data name="Back" xml:space="preserve">
-    <value>Arrière</value>
+    <value>Atrás</value>
   </data>
-  <data name="Name:" xml:space="preserve">
-    <value>Nom:</value>
+  <data name="Date" xml:space="preserve">
+    <value>Fecha</value>
   </data>
-  <data name="Afiliation:" xml:space="preserve">
-    <value>Affiliation:</value>
+  <data name="Category" xml:space="preserve">
+    <value>Categoría</value>
   </data>
-  <data name="Specialization:" xml:space="preserve">
-    <value>Spécialisation:</value>
+  <data name="User" xml:space="preserve">
+    <value>Usuario</value>
   </data>
-  <data name="Space habitat engineering" xml:space="preserve">
-    <value>ngénierie des habitats spatiaux</value>
+  <data name="Description" xml:space="preserve">
+    <value>Descripción</value>
   </data>
-  <data name="Agriculture in extreme environments" xml:space="preserve">
-    <value>Agriculture dans des environnements extrêmes</value>
+  <data name="Information" xml:space="preserve">
+    <value>Información</value>
+  </data>
+  <data name="Initial budget" xml:space="preserve">
+    <value>Presupuesto inicial</value>
+  </data>
+  <data name="Budget balance" xml:space="preserve">
+    <value>Balance presupuestario</value>
+  </data>
+  <data name="Add" xml:space="preserve">
+    <value>Añadir</value>
+  </data>
+  <data name="User list" xml:space="preserve">
+    <value>Lista de Usuarios</value>
+  </data>
+  <data name="Debits list" xml:space="preserve">
+    <value>Lista de débitos</value>
   </data>
 </root>
