--- a/Resources/Views/ResearchPrograms/AddResearchPrograms.fr.resx
+++ b/Resources/Views/ResearchPrograms/AddResearchPrograms.fr.resx
@@ -117,25 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Investigators in charge" xml:space="preserve">
-    <value>Investigateurs en charge</value>
+  <data name="Add Project" xml:space="preserve">
+    <value>Ajouter Projet</value>
   </data>
   <data name="Back" xml:space="preserve">
     <value>Arrière</value>
   </data>
-  <data name="Name:" xml:space="preserve">
-    <value>Nom:</value>
+  <data name="Date" xml:space="preserve">
+    <value>Date</value>
   </data>
-  <data name="Afiliation:" xml:space="preserve">
-    <value>Affiliation:</value>
+  <data name="Category" xml:space="preserve">
+    <value>Catégorie</value>
   </data>
-  <data name="Specialization:" xml:space="preserve">
-    <value>Spécialisation:</value>
+  <data name="User" xml:space="preserve">
+    <value>Utilisateur</value>
   </data>
-  <data name="Space habitat engineering" xml:space="preserve">
-    <value>ngénierie des habitats spatiaux</value>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
   </data>
-  <data name="Agriculture in extreme environments" xml:space="preserve">
-    <value>Agriculture dans des environnements extrêmes</value>
+  <data name="Information" xml:space="preserve">
+    <value>Information</value>
+  </data>
+  <data name="Initial budget" xml:space="preserve">
+    <value>Budget initial</value>
+  </data>
+  <data name="Budget balance" xml:space="preserve">
+    <value>Équilibre budgétaire</value>
+  </data>
+  <data name="Add" xml:space="preserve">
+    <value>Ajouter</value>
+  </data>
+  <data name="User list" xml:space="preserve">
+    <value>Liste des utilisateurs</value>
+  </data>
+  <data name="Debits list" xml:space="preserve">
+    <value>Liste des débits</value>
   </data>
 </root>
