--- a/Resources/Views/ResearchPrograms/ManageResearchPrograms.es.resx
+++ b/Resources/Views/ResearchPrograms/ManageResearchPrograms.es.resx
@@ -117,25 +117,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Investigators in charge" xml:space="preserve">
-    <value>Investigateurs en charge</value>
+  <data name="Manage projects" xml:space="preserve">
+    <value>Gestionar proyectos</value>
   </data>
   <data name="Back" xml:space="preserve">
-    <value>Arrière</value>
+    <value>Atrás</value>
   </data>
-  <data name="Name:" xml:space="preserve">
-    <value>Nom:</value>
+  <data name="Search Project" xml:space="preserve">
+    <value>Buscar Proyecto</value>
   </data>
-  <data name="Afiliation:" xml:space="preserve">
-    <value>Affiliation:</value>
+  <data name="Add" xml:space="preserve">
+    <value>Añadir</value>
   </data>
-  <data name="Specialization:" xml:space="preserve">
-    <value>Spécialisation:</value>
+  <data name="Last projects" xml:space="preserve">
+    <value>Últimos proyectos</value>
   </data>
-  <data name="Space habitat engineering" xml:space="preserve">
-    <value>ngénierie des habitats spatiaux</value>
+  <data name="SimulatingLifeOnMars" xml:space="preserve">
+    <value>Simulando vida en Marte</value>
   </data>
-  <data name="Agriculture in extreme environments" xml:space="preserve">
-    <value>Agriculture dans des environnements extrêmes</value>
+  <data name="Mars" xml:space="preserve">
+    <value>Marte</value>
+  </data>
+  <data name="Coordinator" xml:space="preserve">
+    <value>Coordinador</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Descripción</value>
+  </data>
+  <data name="Human Resources" xml:space="preserve">
+    <value>Recursos Humanos</value>
+  </data>
+  <data name="Budget balance" xml:space="preserve">
+    <value>Balance presupuestario</value>
+  </data>
+  <data name="Select" xml:space="preserve">
+    <value>Seleccionar</value>
+  </data>
+  <data name="Moonwalks" xml:space="preserve">
+    <value>Caminatas lunares</value>
   </data>
 </root>
