--- a/Resources/Views/ResearchPrograms/ResourceUsed.es.resx
+++ b/Resources/Views/ResearchPrograms/ResourceUsed.es.resx
@@ -117,25 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Investigators in charge" xml:space="preserve">
-    <value>Investigateurs en charge</value>
-  </data>
   <data name="Back" xml:space="preserve">
-    <value>Arrière</value>
+    <value>Atrás</value>
   </data>
-  <data name="Name:" xml:space="preserve">
-    <value>Nom:</value>
+  <data name="Resources Used" xml:space="preserve">
+    <value>Recursos utilizados</value>
   </data>
-  <data name="Afiliation:" xml:space="preserve">
-    <value>Affiliation:</value>
+  <data name="Raptor Engines" xml:space="preserve">
+    <value>Motores Raptor</value>
   </data>
-  <data name="Specialization:" xml:space="preserve">
-    <value>Spécialisation:</value>
+  <data name="The Raptor engines are used in the Starship vehicle and are being developed for the next generation of space propulsion systems." xml:space="preserve">
+    <value>Los motores Raptor se utilizan en el vehículo Starship y están siendo desarrollados para la próxima generación de sistemas de propulsión espacial.</value>
   </data>
-  <data name="Space habitat engineering" xml:space="preserve">
-    <value>ngénierie des habitats spatiaux</value>
+  <data name="Primary Resource: The Falcon 9 is a reusable rocket developed by SpaceX, used to launch the Crew Dragon spacecraft and other payloads into orbit. The Falcon 9 is known for its reusability; its first stage can land back on Earth and be reused for subsequent missions, drastically reducing launch costs." xml:space="preserve">
+    <value>Recurso principal: El Falcon 9 es un cohete reutilizable desarrollado por SpaceX, utilizado para lanzar la nave espacial Crew Dragon y otras cargas útiles a la órbita. El Falcon 9 es conocido por su reutilización; su primera etapa puede aterrizar de nuevo en la Tierra y ser reutilizada en misiones posteriores, reduciendo drásticamente los costos de lanzamiento.</value>
   </data>
-  <data name="Agriculture in extreme environments" xml:space="preserve">
-    <value>Agriculture dans des environnements extrêmes</value>
+  <data name="Software" xml:space="preserve">
+    <value>Software</value>
+  </data>
+  <data name="The International Space Station (ISS) itself is a key resource in this collaboration. The ISS serves as a research platform where astronauts conduct experiments in microgravity. The data gathered from these experiments are vital for advancing space science, medical research, and technology development." xml:space="preserve">
+    <value>La Estación Espacial Internacional (ISS) en sí misma es un recurso clave en esta colaboración. La ISS sirve como una plataforma de investigación donde los astronautas realizan experimentos en microgravedad. Los datos recopilados de estos experimentos son vitales para el avance de la ciencia espacial, la investigación médica y el desarrollo tecnológico.</value>
+  </data>
+  <data name="Human Resources" xml:space="preserve">
+    <value>Recursos Humanos</value>
+  </data>
+  <data name="NASA scientists and engineers are involved in mission planning, research, and data analysis from the missions conducted by SpaceX." xml:space="preserve">
+    <value>Los científicos e ingenieros de la NASA participan en la planificación de misiones, la investigación y el análisis de datos de las misiones llevadas a cabo por SpaceX.</value>
   </data>
 </root>
