--- a/Resources/Views/ResearchPrograms/ResultsAndPublications.en.resx
+++ b/Resources/Views/ResearchPrograms/ResultsAndPublications.en.resx
@@ -117,25 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Investigators in charge" xml:space="preserve">
-    <value>Investigateurs en charge</value>
-  </data>
   <data name="Back" xml:space="preserve">
-    <value>Arrière</value>
+    <value>Back</value>
   </data>
-  <data name="Name:" xml:space="preserve">
-    <value>Nom:</value>
+  <data name="Publications" xml:space="preserve">
+    <value>Publications</value>
   </data>
-  <data name="Afiliation:" xml:space="preserve">
-    <value>Affiliation:</value>
+  <data name="SpaceX's Crew Dragon Development" xml:space="preserve">
+    <value>SpaceX's Crew Dragon Development</value>
   </data>
-  <data name="Specialization:" xml:space="preserve">
-    <value>Spécialisation:</value>
+  <data name="SpaceX has published reports on the development of the Crew Dragon spacecraft, highlighting key milestones such as static fire tests, uncrewed missions, and crew safety simulations. These publications discuss the spacecraft's advanced systems, including the launch escape system and autonomous docking technology. These technological advancements ensure the Crew Dragon can safely transport astronauts to and from the ISS." xml:space="preserve">
+    <value>SpaceX has published reports on the development of the Crew Dragon spacecraft, highlighting key milestones such as static fire tests, uncrewed missions, and crew safety simulations. These publications discuss the spacecraft's advanced systems, including the launch escape system and autonomous docking technology. These technological advancements ensure the Crew Dragon can safely transport astronauts to and from the ISS.</value>
   </data>
-  <data name="Space habitat engineering" xml:space="preserve">
-    <value>ngénierie des habitats spatiaux</value>
+  <data name="NASA Technical Publications" xml:space="preserve">
+    <value>NASA Technical Publications</value>
   </data>
-  <data name="Agriculture in extreme environments" xml:space="preserve">
-    <value>Agriculture dans des environnements extrêmes</value>
+  <data name="NASA has released technical papers detailing the Commercial Crew Program and its partnerships with private companies like SpaceX. These publications focus on the mission architecture, spacecraft design, and crew safety required for transporting astronauts to the International Space Station (ISS). These documents outline key operational aspects and safety protocols for human spaceflight, ensuring that both NASA and its private partners can meet the required standards for space missions." xml:space="preserve">
+    <value>NASA has released technical papers detailing the Commercial Crew Program and its partnerships with private companies like SpaceX. These publications focus on the mission architecture, spacecraft design, and crew safety required for transporting astronauts to the International Space Station (ISS). These documents outline key operational aspects and safety protocols for human spaceflight, ensuring that both NASA and its private partners can meet the required standards for space missions.</value>
   </data>
 </root>
