--- a/Resources/Views/ResearchPrograms/ResultsAndPublications.es.resx
+++ b/Resources/Views/ResearchPrograms/ResultsAndPublications.es.resx
@@ -117,25 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Investigators in charge" xml:space="preserve">
-    <value>Investigateurs en charge</value>
-  </data>
   <data name="Back" xml:space="preserve">
-    <value>Arrière</value>
+    <value>Atrás</value>
   </data>
-  <data name="Name:" xml:space="preserve">
-    <value>Nom:</value>
+  <data name="Publications" xml:space="preserve">
+    <value>Publicaciones</value>
   </data>
-  <data name="Afiliation:" xml:space="preserve">
-    <value>Affiliation:</value>
+  <data name="SpaceX's Crew Dragon Development" xml:space="preserve">
+    <value>Desarrollo del Crew Dragon de SpaceX</value>
   </data>
-  <data name="Specialization:" xml:space="preserve">
-    <value>Spécialisation:</value>
+  <data name="SpaceX has published reports on the development of the Crew Dragon spacecraft, highlighting key milestones such as static fire tests, uncrewed missions, and crew safety simulations. These publications discuss the spacecraft's advanced systems, including the launch escape system and autonomous docking technology. These technological advancements ensure the Crew Dragon can safely transport astronauts to and from the ISS." xml:space="preserve">
+    <value>SpaceX ha publicado informes sobre el desarrollo de la nave espacial Crew Dragon, destacando hitos clave como pruebas de fuego estático, misiones no tripuladas y simulaciones de seguridad para la tripulación. Estas publicaciones abordan los sistemas avanzados de la nave espacial, incluyendo el sistema de escape en el lanzamiento y la tecnología de acoplamiento autónomo. Estos avances tecnológicos garantizan que el Crew Dragon pueda transportar astronautas de manera segura hacia y desde la ISS.</value>
   </data>
-  <data name="Space habitat engineering" xml:space="preserve">
-    <value>ngénierie des habitats spatiaux</value>
+  <data name="NASA Technical Publications" xml:space="preserve">
+    <value>Publicaciones Técnicas de la NASA</value>
   </data>
-  <data name="Agriculture in extreme environments" xml:space="preserve">
-    <value>Agriculture dans des environnements extrêmes</value>
+  <data name="NASA has released technical papers detailing the Commercial Crew Program and its partnerships with private companies like SpaceX. These publications focus on the mission architecture, spacecraft design, and crew safety required for transporting astronauts to the International Space Station (ISS). These documents outline key operational aspects and safety protocols for human spaceflight, ensuring that both NASA and its private partners can meet the required standards for space missions." xml:space="preserve">
+    <value>La NASA ha publicado documentos técnicos que detallan el Programa de Tripulación Comercial y sus asociaciones con empresas privadas como SpaceX. Estas publicaciones se centran en la arquitectura de la misión, el diseño de la nave espacial y la seguridad de la tripulación necesaria para transportar astronautas a la Estación Espacial Internacional (ISS). Estos documentos describen aspectos operativos clave y protocolos de seguridad para los vuelos espaciales tripulados, garantizando que tanto la NASA como sus socios privados cumplan con los estándares requeridos para las misiones espaciales.</value>
   </data>
 </root>
