--- a/Resources/Views/ResearchPrograms/ResultsAndPublications.fr.resx
+++ b/Resources/Views/ResearchPrograms/ResultsAndPublications.fr.resx
@@ -117,25 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Investigators in charge" xml:space="preserve">
-    <value>Investigateurs en charge</value>
-  </data>
   <data name="Back" xml:space="preserve">
     <value>Arrière</value>
   </data>
-  <data name="Name:" xml:space="preserve">
-    <value>Nom:</value>
+  <data name="Publications" xml:space="preserve">
+    <value>Publications</value>
   </data>
-  <data name="Afiliation:" xml:space="preserve">
-    <value>Affiliation:</value>
+  <data name="SpaceX's Crew Dragon Development" xml:space="preserve">
+    <value>Développement du Crew Dragon de SpaceX</value>
   </data>
-  <data name="Specialization:" xml:space="preserve">
-    <value>Spécialisation:</value>
+  <data name="SpaceX has published reports on the development of the Crew Dragon spacecraft, highlighting key milestones such as static fire tests, uncrewed missions, and crew safety simulations. These publications discuss the spacecraft's advanced systems, including the launch escape system and autonomous docking technology. These technological advancements ensure the Crew Dragon can safely transport astronauts to and from the ISS." xml:space="preserve">
+    <value>SpaceX a publié des rapports sur le développement du vaisseau spatial Crew Dragon, mettant en évidence des étapes clés telles que les tests de tir statique, les missions sans équipage et les simulations de sécurité pour l'équipage. Ces publications traitent des systèmes avancés du vaisseau spatial, notamment le système d'éjection lors du lancement et la technologie d'amarrage autonome. Ces avancées technologiques garantissent que le Crew Dragon peut transporter les astronautes en toute sécurité vers et depuis l'ISS.</value>
   </data>
-  <data name="Space habitat engineering" xml:space="preserve">
-    <value>ngénierie des habitats spatiaux</value>
+  <data name="NASA Technical Publications" xml:space="preserve">
+    <value>Publications techniques de la NASA</value>
   </data>
-  <data name="Agriculture in extreme environments" xml:space="preserve">
-    <value>Agriculture dans des environnements extrêmes</value>
+  <data name="NASA has released technical papers detailing the Commercial Crew Program and its partnerships with private companies like SpaceX. These publications focus on the mission architecture, spacecraft design, and crew safety required for transporting astronauts to the International Space Station (ISS). These documents outline key operational aspects and safety protocols for human spaceflight, ensuring that both NASA and its private partners can meet the required standards for space missions." xml:space="preserve">
+    <value>La NASA a publié des documents techniques détaillant le programme Commercial Crew et ses partenariats avec des entreprises privées telles que SpaceX. Ces publications se concentrent sur l'architecture de la mission, la conception du vaisseau spatial et la sécurité de l'équipage nécessaire pour transporter des astronautes vers la Station spatiale internationale (ISS). Ces documents décrivent les aspects opérationnels clés et les protocoles de sécurité pour les vols spatiaux habités, garantissant que la NASA et ses partenaires privés respectent les normes requises pour les missions spatiales.</value>
   </data>
 </root>
