Enhance localization, Docker, and UI functionality

--- a/Resources/Views/HumanResources/Employees.en.resx
+++ b/Resources/Views/HumanResources/Employees.en.resx
@@ -138,4 +138,10 @@
   <data name="Status" xml:space="preserve">
     <value>Status</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="Back" xml:space="preserve">
+    <value>Back</value>
+  </data>
 </root>
