--- a/Resources/Views/HumanResources/Employees.fr.resx
+++ b/Resources/Views/HumanResources/Employees.fr.resx
@@ -138,4 +138,10 @@
   <data name="Status" xml:space="preserve">
     <value>Statut</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>Rechercher</value>
+  </data>
+  <data name="Back" xml:space="preserve">
+    <value>Arrière</value>
+  </data>
 </root>
