--- a/Resources/Views/SpaceMissions/Apollo.en.resx
+++ b/Resources/Views/SpaceMissions/Apollo.en.resx
@@ -204,4 +204,7 @@
   <data name="Add" xml:space="preserve">
     <value>Add</value>
   </data>
+  <data name="Back" xml:space="preserve">
+    <value>Back</value>
+  </data>
 </root>
