--- a/Resources/Views/SpaceMissions/Apollo.resx
+++ b/Resources/Views/SpaceMissions/Apollo.resx
@@ -204,4 +204,7 @@
   <data name="Add" xml:space="preserve">
     <value />
   </data>
+  <data name="Back" xml:space="preserve">
+    <value />
+  </data>
 </root>
